# qdrant_docker_agent

./: .env.example  .gitignore  README.md  docker-compose.yml  implementation_plan.md  planning.md  progress.md  pyproject.toml
backend/: Dockerfile
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: __init__.py  chat.py  documents.py
backend/app/services/: embeddings.py  pdf_processor.py  rag_agent.py  vector_store.py
backend/app/services/llm/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
backend/tests/: conftest.py  test_chat_api.py  test_documents_api.py  test_embeddings.py  test_llm_providers.py  test_pdf_processor.py  test_rag_agent.py  test_setup.py  test_vector_store.py
frontend/: Dockerfile  index.html  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: ChatInterface.jsx  FileList.jsx  FileUpload.jsx  MessageBubble.jsx
