[project]
name = "rag-backend"
version = "0.1.0"
description = "RAG application with FastAPI, Qdrant, and LLM provider abstraction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "pypdf>=4.0",
    "tiktoken>=0.6",
    "python-dotenv>=1.0",
    "openai>=1.12",
    "qdrant-client>=1.7",
    "anthropic>=0.18",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests", "tests"]
